<resources>
    <string name="app_name">QuizApp</string>
    <string name="rate">Đánh giá</string>
    <string name="share">Chia sẻ</string>
    <string name="room">Tạo phòng</string>
    <string name="privacy">Privacy</string>
    <string name="logout">Đăng xuất</string>
    <string name="name_category">Nhập tên chủ đề</string>
    <string name="name_subcategory">Nhập lĩnh vực</string>
    <string name="name_upload">Tải lên</string>
    <string name="sub_category">Chủ đề</string>
    <string name="score">Điểm số</string>
    <string name="selectionA">A)</string>
    <string name="selectionB">B)</string>
    <string name="selectionC">C)</string>
    <string name="selectionD">D)</string>
    <string name="EnterQuestion">Nhập câu hỏi</string>
    <string name="UploadQuestion">Hoàn thành</string>
    <string name="Complete">Hoàn thành</string>
    <string name="Next">Tiếp tục</string>

    <string name="app_name_admin">Admin App</string>
    <string name="Question">Câu hỏi</string>
</resources>